# credit-risk-and-loan-default-analysis

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
data/: datacard.md  registry.json
data/preprocessed/: applicants.parquet
data/processed/: applicants.parquet
data/raw/: datacard.md
notebooks/: 01-eda.ipynb  02-modeling.ipynb
src/credit_risk/: __init__.py  cli.py  config.py  data.py  error_analysis.py  evaluation.py  explain.py  fairness.py  pipeline.py  train.py  tuning.py  versioning.py  workflow.py
src/credit_risk/anomaly/: base.py  detectors.py  handling.py
src/credit_risk/data/: __init__.py  io.py  quality.py  schema.py
src/credit_risk/eda/: plots.py  profile.py
src/credit_risk/features/: autoencoder.py  engineering.py  selection.py
src/credit_risk/models/: __init__.py  base.py  implementations.py  registry.py
tests/: conftest.py  plot_assertions.py  test_anomaly.py  test_autoencoder.py  test_cli.py  test_config.py  test_data.py  test_engineering.py  test_error_analysis.py  test_evaluation.py  test_explain.py  test_fairness.py  test_io.py  test_models.py  test_pipeline.py  test_plots.py  test_profile.py  test_quality.py  test_selection.py  test_train.py  test_tuning.py  test_versioning.py  test_warnings.py  test_workflow.py
